test/libhyperion/syntaxTests/parsing/modifier_invocation.hyp
contract c {
    modifier mod1(uint a) { if (msg.sender == address(uint160(a))) _; }
    modifier mod2 { if (msg.sender == address(2)) _; }
    function f() public mod1(7) mod2 { }
}
// ----
// TypeError 9640: (59-78): Explicit type conversion not allowed from "uint160" to "address".
